--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -166,7 +166,8 @@ jobs:
           [ "${{ github.event.inputs.IncludeMIS }}" == "yes" ] && build_targets mis
           [ "${{ github.event.inputs.IncludeBOE }}" == "yes" ] && build_targets misboe
           [ "${{ github.event.inputs.IncludeDSD }}" == "yes" ] && build_targets misdsd
-          echo "targets=$targets" >> $GITHUB_OUTPUT
+          echo "targets=$targets" 
+          # >> $GITHUB_OUTPUT
 
       - name: Check Parameters
         run: |
