--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -88,8 +88,9 @@ jobs:
     steps:
 
       - name: Output Input Parameters
+        shell: bash
         run: |
-          echo "IncludeDelius: ${{ github.event.inputs.IncludeDelius }}\n\
+          echo -e "IncludeDelius: ${{ github.event.inputs.IncludeDelius }}\n\
           IncludeMIS: ${{ github.event.inputs.IncludeMIS }}\n\
           IncludeBOE: ${{ github.event.inputs.IncludeBOE }}\n\
           IncludeDSD: ${{ github.event.inputs.IncludeDSD }}\n\
