--- a/playbooks/oracle_restore_points/playbook.yml
+++ b/playbooks/oracle_restore_points/playbook.yml
@@ -135,7 +135,9 @@
     # (A Guaranteed Restore Point does NOT guarantee that archivelogs will be retained, so we need to ensure
     # that they are not in backups which are expired prior to the GRP being used for flashback).
     - name: Get RMAN Catalog Connection Details
-      when: (required_action == "Create Restore Point") or (required_action == "Drop Restore Point") or (required_action == "Flashback to Restore Point")
+      when: 
+        - (required_action == "Create Restore Point") or (required_action == "Drop Restore Point") or (required_action == "Flashback to Restore Point")
+        - catalog is defined
 
       block:
 
@@ -159,8 +161,6 @@
           script: check_database_registered.sh {{ database_primary_unique }} {{ connect_to_catalog }}
           register: database_registered
           changed_when: false
-      
-      when: catalog is defined
 
     - name: Get Database Role
       script: get_database_role.sh
