Debug group names

--- a/playbooks/oracle_restore_points/playbook.yml
+++ b/playbooks/oracle_restore_points/playbook.yml
@@ -11,11 +11,9 @@
     - debug: var=required_action
     - debug: var=restore_point_name
     - debug:
-        msg: "{{ group_names | regex_search('delius_primarydb') }}"
+        msg: "{{ group_names }}"
       when: 
-        - group_names | regex_search('delius_primarydb') 
         - database_primary_sid is defined
-    - meta: end_play
 
     - name: Validate Restore Point Name
       script:  validate_restore_point_name.sh
