--- a/.github/workflows/test-automation-task.yml
+++ b/.github/workflows/test-automation-task.yml
@@ -14,7 +14,7 @@ on:
 
   push:
     branches:
-      - main
+      - DBA-531-RESTORE
     paths:
       - ansible/**
       - .github/workflows/test-automation-task.yml
@@ -37,8 +37,8 @@ jobs:
     name: Test automation task
     environment: development # hard-coded this while spiking this out
     runs-on: ubuntu-22.04
-    container:
-      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
+    # container:
+    #   image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
 
     steps:
       - name: Checkout Code
