--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -200,6 +200,7 @@ jobs:
           aws-region: "eu-west-2"
 
       - name: Start Ansible Restore Points
+        shell: bash
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory \
