--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -71,10 +71,11 @@ env:
   command: ansible-playbook operations/playbooks/oracle_restore_points/playbook.yml
   inventory: inventory/ansible
 
-# Allow permissions on repository and docker image respectively 
+# Allow permissions on repository and docker image and OIDC token
 permissions:
   contents: read
   packages: read
+  id-token: write  # This is required for requesting the JWT
 
 jobs:          
   deployment:
