--- a/.github/workflows/test-automation-task.yml
+++ b/.github/workflows/test-automation-task.yml
@@ -14,7 +14,7 @@ on:
 
   push:
     branches:
-      - DBA-531-RESTORE
+      - main
     paths:
       - ansible/**
       - .github/workflows/test-automation-task.yml
