Permissions id-token

--- a/.github/workflows/test-automation-task.yml
+++ b/.github/workflows/test-automation-task.yml
@@ -30,6 +30,7 @@ on:
 permissions:
   contents: read
   packages: read
+  id-token: write
 
 jobs:
   # Start deployment container job based on the build delius-ansible-aws image
