Checkout Alfresco wallet playbook

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -70,6 +70,7 @@ jobs:
             playbooks/oracle_password_rotation
             playbooks/oracle_ha
             playbooks/ansbile_controller
+            playbooks/alfresco_wallet
           path: operations
           ref: ${{ github.event.inputs.SourceCodeVersion }}
           fetch-depth: 0
