Comment out engineering password rotation

--- a/playbooks/oracle_password_rotation/password_rotation.yml
+++ b/playbooks/oracle_password_rotation/password_rotation.yml
@@ -10,8 +10,8 @@
 # then again below.   However this is a sync only and will not result in 2 password changes and so is harmless.   (We do not want to suppress the
 # call-out above because that then allows any locked database monitoring accounts to be unlocked).
 
-- hosts: localhost
-  gather_facts: no
-  become: no
-  roles:
-    - { role: engineering_password_rotation, when: environment_name is search('engineering') }
+# - hosts: localhost
+#   gather_facts: no
+#   become: no
+#   roles:
+#     - { role: engineering_password_rotation, when: environment_name is search('engineering') }
