--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -87,6 +87,38 @@ jobs:
           ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
 
+      - name: Install yq
+        uses: dcarbone/install-yq-action@v1.1.1
+        with:
+          download-compressed: true
+          version: "v4.35.1"
+          force: true
+
+      - name: Define Targets
+        id: definetargets
+        working-directory: ${{ env.inventory }}
+        run: |
+          targets=""
+          prefix="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment}} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')"
+          check
+          build_targets() {
+            databasetype=${1}
+            if [[ -e group_vars/${prefix}_all.yml ]]
+            then
+              high_availability_count=$(yq .high_availability_count.${databasetype} group_vars/${prefix}_all.yml)
+              [ $high_availability_count -le 2 ] && targets="${targets}${prefix}_${databasetype}_primarydb,"
+              [ $high_availability_count -eq 1 ] && targets="${targets}${prefix}_${databasetype}_standbydb1,"
+              [ $high_availability_count -eq 2 ] && targets="${targets}${prefix}_${databasetype}_standbydb1,${prefix}_${databasetype}_standbydb2,"
+            fi
+            echo
+          }
+          build_targets delius
+          build_targets mis
+          build_targets misboe
+          build_targets misdsd
+          echo "targets=$targets"
+          echo "targets=$targets" >> $GITHUB_OUTPUT
+
       - name: Configure AWS Credentials
         id: login-aws
         uses: aws-actions/configure-aws-credentials@v4
@@ -95,9 +127,10 @@ jobs:
           role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
           aws-region: "eu-west-2"
 
-      - name: Start Ansible Password Rotation
-        shell: bash
-        run: |
-          export ANSIBLE_CONFIG=$ansible_config
-          $command -i $inventory ${{ github.events.inputs.VerboseOutput }} ${{ github.events.inputs.AnsibleForks }}
+      # - name: Start Ansible Password Rotation
+      #   shell: bash
+      #   run: |
+      #     export ANSIBLE_CONFIG=$ansible_config
+      #     $command -i $inventory
+      #     -e oracle_dbs=${{ steps.definetargets.outputs.targets }} ${{ github.events.inputs.VerboseOutput }} ${{ github.events.inputs.AnsibleForks }}
           
