--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -102,7 +102,7 @@ jobs:
           prefix="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment}} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')"
           build_targets() {
             databasetype=${1}
-            if [[ -e group_vars/${prefix}_all.yml ]]
+            if [[ -e group_vars/${prefix}_${databasetype}_primarydb.yml ]]
             then
               high_availability_count=$(yq .high_availability_count.${databasetype} group_vars/${prefix}_all.yml)
               [ $high_availability_count -le 2 ] && targets="${targets}${prefix}_${databasetype}_primarydb,"
