Remove comments used for debugging

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -126,10 +126,10 @@ jobs:
           role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
           aws-region: "eu-west-2"
 
-      # - name: Start Ansible Password Rotation
-      #   shell: bash
-      #   run: |
-      #     export ANSIBLE_CONFIG=$ansible_config
-      #     $command -i $inventory
-      #     -e oracle_dbs=${{ steps.definetargets.outputs.targets }} ${{ github.events.inputs.VerboseOutput }} ${{ github.events.inputs.AnsibleForks }}
+      - name: Start Ansible Password Rotation
+        shell: bash
+        run: |
+          export ANSIBLE_CONFIG=$ansible_config
+          $command -i $inventory \
+          -e oracle_dbs=${{ steps.definetargets.outputs.targets }} ${{ github.events.inputs.VerboseOutput }} ${{ github.events.inputs.AnsibleForks }}
           
