Change parameter name

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -131,5 +131,5 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory \
-          -e oracle_dbs=${{ steps.definetargets.outputs.targets }} ${{ github.events.inputs.VerboseOutput }} ${{ github.events.inputs.AnsibleForks }}
+          -e rotate_groups=${{ steps.definetargets.outputs.targets }} ${{ github.events.inputs.VerboseOutput }} ${{ github.events.inputs.AnsibleForks }}
           
